21_Kubernetes/13_How_network_works_in_K8S/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: web-html
        configMap:
          name: backend-cm


---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: backend-svc
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
