21_Kubernetes/13_How_network_works_in_K8S/cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: cache
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: web-html
        configMap:
          name: cache-cm


---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: cache-svc
spec:
  selector:
    app: cache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
