21_Kubernetes/13_How_network_works_in_K8S/deny-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: app
  name: deny-network-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
